<resources>
    <string name="app_name">Restorant order</string>
    <string name="name">Register</string>
    <string name="name_first">WINNER WINNER CHICKEN DINNER</string>
    <string name="name_Register">Dinner</string>
    <string name="name_Login">Login</string>
    <string name="login_Username">Username:</string>
    <string name="login_Password">Password:</string>
    <string name="login_Email">Email:</string>
    <string name="login_DinnerType">DinnerType:</string>
    <string name="login_Delivery">Delivery:</string>
    <string name="login_price">price:</string>
    <string name="login_Payment">Payment:</string>
    <string name="Box_Remember">Remember me</string>
    <string name="Box_Soup">Soup</string>
    <string name="Box_Main">Main</string>
    <string name="Box_Salad">Salad</string>
    <string name="radio_Yes">Yes</string>
    <string name="radio_No">No</string>
    <string name="Login_CREATE">CREATE</string>
    <string name="login_Login">Login</string>
    <string name="login_Register">Register</string>
    <string name="login_faill_username">a-Z 3 to"\n" 20 username</string>
    <string name="login_faill_password">a-Z 0-9 (.!@_)"\n" 5 to 20 password</string>
    <string name="login_faill_email">a-Z 0-9 (.!@_)"\n" 10 to 50 email</string>
    <string name="new_entry_database_info">palaukite sunciama</string>


    <string name="spinner_card">Card</string>
    <string-array name="Cards_array">
        <item>card</item>
        <item>card1</item>
        <item>card2</item>
        <item>card3</item>
    </string-array>
</resources>
