<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name_Register"
        android:textAlignment="center"
        android:textColor="@color/colorMaintext"
        android:textSize="30sp"
        android:textStyle="normal|bold" />


    <TextView
        android:id="@+id/DinnerType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_DinnerType"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />
    <CheckBox
        android:id="@+id/Soup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Box_Soup" />
    <CheckBox
        android:id="@+id/Main"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Box_Main" />
    <CheckBox
        android:id="@+id/Salad"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Box_Salad" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Delivery"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Yes"/>

        <Space
            android:layout_width="150dp"
            android:layout_height="30dp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_No"/>


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_price"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="@color/colorMaintext" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Payment"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:prompt="@string/country_prompt"
        android:text="asdasd"/>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Loginbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Login" />

        <Button
            android:id="@+id/Registerbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Register" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Mainbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="Mainbutton" />
    </TableRow>

</LinearLayout>