<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name_first"
        android:textAlignment="center"
        android:textColor="@color/colorMaintext"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="133dp"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/username2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Username"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="@color/colorMaintext" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Password"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="@color/colorMaintext" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <CheckBox
        android:id="@+id/remembarbtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Box_Remember" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Loginbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Login" />

        <Button
            android:id="@+id/Registerbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Register" />
    </TableRow>
</LinearLayout>