<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name_Register"
        android:textAlignment="center"
        android:textColor="@color/colorMaintext"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/plain_text_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Username"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="@color/colorMaintext" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Password"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="@color/colorMaintext" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_Email"
        android:textColor="@color/colorMaintext"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorMaintext" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Register" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/login_Login" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/mainbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="Mainbutton" />
    </TableRow>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="invisible" />

</LinearLayout>